Fix to text-align css for side_tags in application.css. Fix to tag cloud on player page emotions tab.

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -546,7 +546,6 @@ h2 {
 }
 
 .side_tags {
-    text-align: center;
     line-height: 15px;
 }
 
